...
                android:textColor="?attr/daxColorPrimaryText" />

        </FrameLayout>
    </com.duckduckgo.common.ui.view.shape.DaxBubbleCardView>

    <com.duckduckgo.common.ui.view.button.DaxButtonPrimary
        android:id="@+id/primaryCta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/daxDialogButtonSpacing"
        android:text="@string/onboardingLetsDoItButton"
        app:daxButtonSize="large"
        app:layout_constraintEnd_toEndOf="@id/cardView"
...
