...
        android:layout_marginTop="@dimen/keyline_4"
        android:text="@string/defaultBrowserDescriptionNoDefault"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/browserProtectionTitle"
        app:layout_constraintStart_toStartOf="@id/browserProtectionTitle"
        app:layout_constraintTop_toBottomOf="@id/browserProtectionTitle"
        app:layout_constraintBottom_toTopOf="@id/continueButton"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintWidth_percent="0.8" />

    <com.duckduckgo.common.ui.view.button.DaxButtonSecondary
        android:id="@+id/continueButton"
        android:layout_width="0dp"
...
