...
                        android:id="@+id/addFolderMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/keyline_2"
                        android:layout_marginEnd="6dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/browserMenu"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/addFolderMenuView"
                            android:layout_width="wrap_content"
...
