...
            app:srcCompat="@drawable/ic_arrow_left_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/forwardMenuItem"
            style="@style/Widget.DuckDuckGo.NavigationalIcon"
            android:contentDescription="@string/forward"
            app:srcCompat="@drawable/ic_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/refreshMenuItem"
            app:layout_constraintStart_toEndOf="@+id/backMenuItem"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconDrawable="@drawable/ic_add_to_home_16"
                app:primaryText="@string/addToHome" />

            <com.duckduckgo.common.ui.view.MenuItemView
                android:id="@+id/privacyProtectionMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconDrawable="@drawable/ic_shield_disabled_16"
                app:primaryText="@string/enablePrivacyProtection" />

            <com.duckduckgo.common.ui.view.MenuItemView
...
