<?xml version="1.0" encoding="utf-8"?>

<com.duckduckgo.app.browser.DuckDuckGoWebView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/browserWebView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbarSize="4dp"
    android:scrollbarStyle="outsideInset"
    android:scrollbarThumbHorizontal="@color/webViewScrollbarThumbColor"
    android:scrollbarThumbVertical="@color/webViewScrollbarThumbColor"
    android:scrollbarTrackHorizontal="?attr/daxColorWebViewScrollbarTrack"
    android:scrollbarTrackVertical="?attr/daxColorWebViewScrollbarTrack"
    android:overScrollMode="always"
    android:visibility="gone"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:visibility="visible">

</com.duckduckgo.app.browser.DuckDuckGoWebView>